# Master_Thesis

./: .env  .gitignore  bgp-bpe-tokenizer.json  bgp-unigram-tokenizer.json  bgp-wordpiece-tokenizer.json  evaluate_model.py  explore_bgp_updates.py  explore_traceroute.py  extract_as_paths.py  pyproject.toml  split_data.py  test.txt  train.txt  train_autoencoder.py  train_tokenizer.py  training_log.txt  validation.txt
Notes/: A Comparative Evaluation of Tokenization Algorithms and Granularity for Network Representation Learning.md  A Systematic Investigation into Optimal Tokenization Strategies for Internet Infrastructure Data.md  Investigation.md  Questions.md  Thesis Proposal - Path Similarity and Root Cause Analysis.md  Towards a Standard Embedding for Generative and Retrieval-Based Network Intelligence.md
demo/: 1_extract_as_paths.py  1_extract_bgp_data.py  2_split_data.py  2_train_tokenizer.py  3_train_autoencoder.py  3_train_tokenizer.py  4_evaluate_model.py  4_train_autoencoder.py  5_evaluate_model.py  diagnose.py  fetch_traceroute.py
